# knp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  NOTICE.txt  README.md  SecretsHookUpdate.ps1  \  azure-pipelines.yml  build.sh  install_sdk_image.sh  requirements.txt
.github/workflows/: cmake-build.yml  docker-build-image.yml  precommit-check.yml
ci/: 3d-party-requirements-motiv.xml  3d-party-requirements-service.xml  3d-party-requirements.xml  run_pvs.sh
cmake/: knp-functions.cmake  pvs-studio.cmake  third-party.cmake  version.cmake
doc/: CMakeLists.txt
doc/html/: index.html
docker/base-image/: Dockerfile  backports.pref  debian-backports.sources  start.sh
docker/build-image/: Dockerfile  LICENSE.txt  NOTICE.txt
docker/sdk-image/: Dockerfile  NOTICE.txt  docker-compose.yml
examples/: .clang-format  CMakeLists.txt
examples/mnist-client/: CMakeLists.txt  README.md  graph_physics.cpp  graph_physics.h  inference.cpp  inference.h  main.cpp  process_data.cpp  process_data.h  visualize_network.cpp  visualize_network.h
examples/mnist-learn/: CMakeLists.txt  README.md  annotated_network.h  construct_network.cpp  construct_network.h  data_read.cpp  data_read.h  dataset.cpp  dataset.h  evaluate_results.h  evaluation.cpp  evaluation.h  generators.h  global_config.h  inference.cpp  inference.h  logging.cpp  logging.h  main.cpp  mnist-learn.h  model_desc.cpp  model_desc.h  network_validation.cpp  network_validation.h  parse_arguments.cpp  parse_arguments.h  read_spike_frames.cpp  run_network.cpp  run_network.h  save_network.h  shared_network.h  time_string.cpp  time_string.h  train.cpp  train.h  training.h  wta.cpp  wta.h
examples/mnist-learn/models/: network_constructor.h  network_functions.h  resource_from_weight.h
examples/mnist-learn/models/altai/: construct_network.cpp  hyperparameters.h  network_functions.h  prepare_network_for_inference.cpp  spike_generators.cpp
examples/mnist-learn/models/blifat/: construct_network.cpp  hyperparameters.h  network_functions.h  prepare_network_for_inference.cpp  spike_generators.cpp
examples/save-load-networks/: CMakeLists.txt  README.md  main.cpp
examples/simple-network/: CMakeLists.txt  README.md  main.cpp
knp/: .clang-format  CMakeLists.txt
knp/autodoc/: CMakeLists.txt  directories.dox  mainpage.dox
knp/autodoc/common_files/: DoxygenLayout.xml  header.html
knp/backends/: CMakeLists.txt
knp/backends/cpu/: CMakeLists.txt
knp/backends/gpu/: CMakeLists.txt
knp/base-framework/: CMakeLists.txt
knp/base-framework/impl/: backend_loader.cpp  message_handlers.cpp  model_executor.cpp  model_loader.cpp  model_monitoring.cpp  network_validator.cpp
knp/base-framework/packaging/: knp-base-frameworkConfig.cmake.in
knp/core-library/: CMakeLists.txt
knp/core-library/impl/: backend.cpp  common_precomp.h  message_bus.cpp  message_bus_impl.h  message_endpoint.cpp  message_endpoint_impl.h
knp/devices-library/: CMakeLists.txt
knp/meta-library/: CMakeLists.txt
knp/neuron-traits-library/: CMakeLists.txt
knp/python-framework/: CMakeLists.txt
knp/synapse-traits-library/: CMakeLists.txt
knp/tests/: CMakeLists.txt
knp/tests/backend/: cuda_test.cpp  cuda_test.cu  multi_thread_cpu_test.cpp  single_thread_cpu_test.cpp
knp/tests/common/: generators.h  tests_common.h  tests_messaging_common.h
knp/tests/core/: core_test.cpp  device_test.cpp  message_bus_test.cpp  messaging_test.cpp  population_test.cpp  projection_test.cpp  uid_test.cpp
knp/tests/framework/: altai_lif_test.cpp  backend_loader_test.cpp  connectivity_validator_test.cpp  data_processing_test.cpp  inference_evaluation_test.cpp  input_test.cpp  lif_test.cpp  message_handler_test.cpp  model_monitoring_test.cpp  neuron_normalizers_test.cpp  output_test.cpp  projection_creators_test.cpp  (+5 more)
packaging/: NOTICE.txt
tools/hooks/: cccc.py
(+281 files in other folders)
